change it to english

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                     <div class="board-2048-tiles" id="board-2048-tiles"></div>
                     <div class="board-2048-overlay" id="game2048-win-dialog">
                         <div class="overlay-card">
-                            <p class="overlay-title">已经达到 2048！</p>
-                            <p class="overlay-desc">是否要继续？选择继续将进入无尽模式。</p>
+                            <p class="overlay-title">Reached 2048!</p>
+                            <p class="overlay-desc">Want to continue? Choosing to continue will enter the endless mode.</p>
                             <div class="overlay-actions">
-                                <button class="btn primary" id="game2048-continue-btn">继续挑战</button>
-                                <button class="btn ghost" id="game2048-stay-btn">结束本局</button>
+                                <button class="btn primary" id="game2048-continue-btn">Continue</button>
+                                <button class="btn ghost" id="game2048-stay-btn">End</button>
                             </div>
                         </div>
                     </div>
