Added swipe gesture controls

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </button>
                 <div class="snake-title">
                     <h2>Neon Snake</h2>
-                    <span class="subtitle">WASD / Arrow keys · ESC to pause</span>
+                    <span class="subtitle">WASD / Arrow keys · ESC to pause · Swipe to turn</span>
                 </div>
                 <div class="skin-indicator">
                     <span id="skin-label">Skin: Green</span>
@@ -129,7 +129,7 @@
                 </button>
                 <div class="game2048-title">
                     <h2>2048 Puzzle</h2>
-                    <span class="subtitle">Use arrow keys or WASD to move</span>
+                    <span class="subtitle">Use arrow keys / WASD or swipe to move</span>
                 </div>
                 <div class="game2048-status">
                     <span id="game2048-state-label">Playing</span>
