--- a/index.html
+++ b/index.html
@@ -429,11 +429,13 @@
                         <h3>Achievements</h3>
                         <p>Total Solves: <span id="sudoku-total-solves">0</span></p>
                         <p>Perfect Solves: <span id="sudoku-perfect-solves">0</span></p>
-                        <p>Current Streak: <span id="sudoku-current-streak">0</span></p>
-                        <p>Best Streak: <span id="sudoku-best-streak">0</span></p>
-                        <p>Average Time: <span id="sudoku-average-time">--</span></p>
+                        <p>Classic Streak: <span id="sudoku-classic-streak">0</span> / <span id="sudoku-classic-best-streak">0</span></p>
+                        <p>Killer Streak: <span id="sudoku-killer-streak">0</span> / <span id="sudoku-killer-best-streak">0</span></p>
+                        <p>Classic Avg Time: <span id="sudoku-classic-avg">--</span></p>
+                        <p>Killer Avg Time: <span id="sudoku-killer-avg">--</span></p>
                         <p>Best Time: <span id="sudoku-best-time">--</span></p>
-                        <p>Hardest Clear: <span id="sudoku-hardest-clear">--</span></p>
+                        <p>Classic Hardest: <span id="sudoku-classic-hardest">--</span></p>
+                        <p>Killer Hardest: <span id="sudoku-killer-hardest">--</span></p>
                         <p class="muted" id="sudoku-best-detail">No record yet</p>
                         <p class="muted" id="sudoku-hardest-detail"></p>
                     </div>
